d2c-org/ilh-sales/base-objects/main/default/objects/Contact/fields/MailSuppressionDate__c.field-meta.xml
<CustomField>
    <fullName>MailSuppressionDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>The date the consumer requested to be removed from marketing emails. Data is source from IRIS Prospect.</description>
    <label>Mail Suppression Date</label>
    <type>Date</type>
</CustomField>