d2c-org/ilh-sales/base-objects/main/default/objects/Contact/fields/OptOutDate__c.field-meta.xml
<CustomField>
    <fullName>OptOutDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>The date the consumer asked to be removed from 3rd Party marketing. This data is sourced from IRIS Prospect.</description>
    <label>Opt-Out-Date</label>
    <type>Date</type>
</CustomField>