d2c-org/ilh-sales/base-objects/main/default/objects/Contact/fields/PhoneSuppressionDate__c.field-meta.xml
<CustomField>
    <fullName>PhoneSuppressionDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>The date the consumer asked to be removed from marketing calls. Data sourced from IRIS Prospect.</description>
    <label>Phone Suppression Date</label>
    <type>Date</type>
</CustomField>