d2c-org/ilh-sales/base-objects/main/default/objects/Contact/fields/PrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhone__c</fullName>
    <description>picklist of types of phone numbers, one of which will be designated as primary</description>
    <label>Primary Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>