d2c-org/ilh-sales/base-objects/main/default/objects/Contact/fields/SSNLast4__c.field-meta.xml
<CustomField>
    <fullName>SSNLast4__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Last 4 digits of the SSN of the consumer.  This field is used for verification of caller.</description>
    <label>SSN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>